es-kibana: update README.md